--- a/src/main/resources/templates/accreditamento/accreditamentoEnableField.html
+++ b/src/main/resources/templates/accreditamento/accreditamentoEnableField.html
@@ -12,8 +12,8 @@
 					<div class="x_title x_menu">
 						<h2 th:text="${#messages.msg('label.provider_accreditamento') + ' ' + accreditamentoWrapper.provider.denominazioneLegale + ' (' + accreditamentoWrapper.provider.codiceFiscale + ') ' + #messages.msg('label.tipo_provider') + ' ' + accreditamentoWrapper.provider.tipoOrganizzatore.gruppo}"></h2>
 						<div class="pull-right buttons-header">
-							<a th:text="#{label.invia_richiesta_integrazione}" class="btn btn-primary" th:if="${userCanSendRichiestaIntegrazione}" th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/sendRichiestaIntegrazione|}"></a>
 							<button type="button" class="btn btn-primary" th:text="#{label.torna_in_visualizzazione}" onclick="switchMode('show')"></button>
+							<a th:text="#{label.invia_richiesta_integrazione}" class="btn btn-success btn-primary" th:if="${userCanSendRichiestaIntegrazione}" th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/sendRichiestaIntegrazione|}"></a>
 						</div>
 						<div class="clearfix"></div>
 					</div>
